--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-sketch-canvas": "^6.2.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
